Cleaning up WrapAlbum. Raising the Player z-index to fix bug. y-margin around the Card depends on whether in Dialog.

--- a/my-app/src/components/Player/Player.css
+++ b/my-app/src/components/Player/Player.css
@@ -8,7 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 2;
+    z-index: 3;
     padding: 0% 1%;
 }
 
