--- a/my-app/src/components/WrapAlbum/WrapAlbum.css
+++ b/my-app/src/components/WrapAlbum/WrapAlbum.css
@@ -31,7 +31,6 @@
 }
 
 .extra-album-info-container {
-    font-size: 1.2rem;
     display: flex;
 }
 
